--- a/H5Project/link1-download.html
+++ b/H5Project/link1-download.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Links: Task 1</title>
-    <style>
-      body {
-        background-color: #fff;
-        color: #333;
-        font: 1em / 1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
-        padding: 1em;
-        margin: 0;
-      }
 
-      h1 {
-        font-size: 2rem;
-        margin: 0;
-        color: purple;
-      }
+<head>
+  <meta charset="utf-8" />
+  <title>Links: Task 1</title>
+  <style>
+    body {
+      background-color: #fff;
+      color: #333;
+      font: 1em / 1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
+      padding: 1em;
+      margin: 0;
+    }
 
-      p {
-        color: gray;
-        margin: 0.5em 0;
-      }
+    h1 {
+      font-size: 2rem;
+      margin: 0;
+      color: purple;
+    }
 
-      * {
-        box-sizing: border-box;
-      }
-    </style>
-  </head>
+    p {
+      color: gray;
+      margin: 0.5em 0;
+    }
 
-  <body>
+    * {
+      box-sizing: border-box;
+    }
+  </style>
+</head>
 
-    <h1>Information on Whales</h1>
+<body>
 
-    <p>For more information on our conservation activities and which Whales we study,
+  <h1>Information on Whales</h1>
+
+  <p>For more information on our conservation activities and which Whales we study,
     see our <a target="_blank">Whales page</a>.</p>
 
-    <p>If you want to ask our team more questions, feel free to <a>email us</a>.</p>
-    
-  </body>
+  <p>If you want to ask our team more questions, feel free to <a>email us</a>.</p>
+  <iframe src="https://developer.mozilla.org/en-US/docs/Glossary" width="100%" height="500" frameborder="0"
+    allowfullscreen sandbox>
+    <p> <a href="https://developer.mozilla.org/en-US/docs/Glossary">
+        Fallback link for browsers that don't support iframes
+      </a> </p>
+  </iframe>
+  <embed src="whoosh.swf" quality="medium" width="550" height="400" name="whoosh" allowScriptAccess="sameDomain"
+    allowFullScreen="false" type="application/x-shockwave-flash"
+    pluginspage="http://www.macromedia.com/go/getflashplayer">
+
+
+
+
+  <svg version="1.1" baseProfile="full" width="300" height="200" xmlns="http://www.w3.org/2000/svg">
+    <rect width="100%" height="100%" fill="black" />
+    <!-- srcset is SVG  -->
+ <img src="" alt="" srcset="">
+  </svg>
+</body>
 
 </html>
